--- a/fingerprint/android.hardware.biometrics.fingerprint@2.3-service.xiaomi_davinci.rc
+++ b/fingerprint/android.hardware.biometrics.fingerprint@2.3-service.xiaomi_davinci.rc
@@ -1,4 +1,4 @@
-service vendor.fps_hal /vendor/bin/hw/android.hardware.biometrics.fingerprint@2.3-service.xiaomi_raphael
+service vendor.fps_hal /vendor/bin/hw/android.hardware.biometrics.fingerprint@2.3-service.xiaomi_davinci
     class late_start
     user system
     group system input uhid
