--- a/nfc/libnfc-nxp.conf
+++ b/nfc/libnfc-nxp.conf
@@ -215,6 +215,7 @@ DEFAULT_SYS_CODE_ROUTE=0x00
 
 ###############################################################################
 # eSE interface options
+# NFC 0x01
 # SPI 0x02
 NXP_P61_LS_DEFAULT_INTERFACE=0x02
 
@@ -241,6 +242,7 @@ NXP_FLASH_CONFIG=0x02
 
 ###############################################################################
 # eSE interface options for JCOP Download
+# NFC 0x01
 # SPI 0x02
 NXP_P61_JCOP_DEFAULT_INTERFACE=0x02
 
@@ -418,3 +420,15 @@ OFFHOST_ROUTE_ESE={01}
 #UICC1 = 02
 #UICC2 = 03
 OFFHOST_ROUTE_UICC={02:03}
+################################################################################
+# This will enable power state required for GSMA testing.
+# When this is enabled , then default AID route power state is added with this power state
+# If any aid with power state 0 is added, then this power state is used.
+# bit pos 0 = Switch On
+# bit pos 1 = Switch Off
+# bit pos 2 = Battery Off
+# bit pos 3 = Screen off unlock
+# bit pos 4 = Screen On lock
+# bit pos 5 = Screen Off lock
+#DEFUALT_GSMA_PWR_STATE=0x3B
+#################################################################################
